# Research-To-Blog

./: .gitignore  CONTRIBUTING.md  Dockerfile  INSTALLATION_NOTES.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt  run_example.sh  setup.py  verify_installation.py
app/: __init__.py  config.py
app/agents/: __init__.py  editor.py  factchecker.py  judge.py  planner.py  seo.py  sourcer.py  summarizer.py  writer.py
app/api/: __init__.py  server.py
app/cli/: main.py
app/exporters/: __init__.py  cms.py  markdown.py
app/graph/: __init__.py  state.py  workflow.py
app/llm/: __init__.py  clients.py  json_guard.py  prompts.py
app/tools/: __init__.py  citation.py  quality.py  retrieval.py  scrape.py  search.py
examples/: sample_output.md
tests/: __init__.py  conftest.py  test_citations.py  test_quality_gates.py  test_retrieval.py  test_smoke_pipeline.py
tests/fixtures/: sample_topic.yaml
